import gdk.GameMetadata;
import java.util.Arrays;
import java.util.List;

public class Metadata extends GameMetadata {
    
    @Override
    public String getGameName() {
        return "Timer";
    }
    
    @Override
    public String getGameVersion() {
        return "1.0.0";
    }
    
    @Override
    public String getGameDescription() {
        return "A timer game for testing GDK modularity";
    }
    
    @Override
    public String getGameAuthor() {
        return "GDK Test Module";
    }
    
    @Override
    public boolean supportsSinglePlayer() {
        return true;
    }
    
    @Override
    public boolean supportsMultiPlayer() {
        return false;
    }
    
    @Override
    public boolean supportsLocalMultiPlayer() {
        return false;
    }
    
    @Override
    public boolean supportsAIOpponent() {
        return false;
    }
    
    @Override
    public boolean supportsTournament() {
        return false;
    }
    
    @Override
    public int getMinPlayers() {
        return 1;
    }
    
    @Override
    public int getMaxPlayers() {
        return 1;
    }
    
    @Override
    public String getMinDifficulty() {
        return "Easy";
    }
    
    @Override
    public String getMaxDifficulty() {
        return "Easy";
    }
    
    @Override
    public int getEstimatedDurationMinutes() {
        return 15;
    }
    
    @Override
    public List<String> getRequiredResources() {
        return Arrays.asList("display", "input_device");
    }
} 