@startuml

left to right direction
hide empty members
skinparam linetype ortho
skinparam nodesep 60
skinparam ranksep 60
skinparam classAttributeIconSize 0

title <b>OMG Game Development Kit (GDK)</b>\n<font size=14>modules folder</font>

package "Game Modules" {
    package "Chatroom Module" {
        together {
            class Metadata {
                + String getGameName()
                + String getGameVersion()
                + String getGameDescription()
                + String getGameAuthor()
                + boolean supportsSinglePlayer()
                + boolean supportsMultiPlayer()
                + boolean supportsLocalMultiPlayer()
                + boolean supportsAIOpponent()
                + boolean supportsTournament()
                + int getMinPlayers()
                + int getMaxPlayers()
                + String getMinDifficulty()
                + String getMaxDifficulty()
                + int getEstimatedDurationMinutes()
                + List<String> getRequiredResources()
            }

            class Main {
                - static String GAME_ID
                - Metadata metadata
                - String lastGameMode
                - List<Map<String, Object>> lastPlayers
                - String localPlayerId
                - String currentPlayerSelector
                - boolean isSinglePlayerMode
                - TextArea chatAreaRef
                - TextArea playersTextRef
                - TextArea allMessagesAreaRef
                - Label infoLabelRef
                - Label youLabelRef
                - Label localMultiplayerLabel
                - ComboBox<String> playerSelector
                - Label titleLabel
                + Scene launchGame(Stage primaryStage)
                + void stopGame()
                + Map<String, Object> handleMessage(Map<String, Object> message)
                + Metadata getMetadata()
                - String generateRandomMessage()
                - String buildPlayersText()
                - void appendChat(String from, String text)
                - void appendAllMessages(Map<String, Object> message)
                - String getGameModeDisplayName()
                - Scene createTestInterface(Stage primaryStage)
            }
        }

        Main *-- Metadata : owns
        Metadata -[hidden]-> Main
    }
}

package "GDK Core" {
    class "gdk.internal.Logging" as GdkLogging
    class "gdk.internal.MessagingBridge" as GdkMessagingBridge <<final>>
    interface "gdk.api.GameModule" as GdkGameModule
    abstract class "gdk.api.GameMetadata" as GdkGameMetadata

    GdkLogging -[hidden]-> GdkMessagingBridge
    GdkMessagingBridge -[hidden]-> GdkGameModule
    GdkGameModule -[hidden]-> GdkGameMetadata
}

Main -> GdkGameModule
Metadata -> GdkGameMetadata
Main --> GdkLogging
Main --> GdkMessagingBridge 

legend right
    <b>Legend</b>
    --> dependency / usage
    -> implements/extends (labeled)
    *-- composition / ownership
    end legend

@enduml
